--- a/src/main/webapp/award_files/award.tex
+++ b/src/main/webapp/award_files/award.tex
@@ -27,7 +27,7 @@ In recognition of your dedicated service to our customers and our company.
 \centering{
 \begin{tabular}{cccc}
 \\
-\\
+\includegraphics[width=8cm, height=2cm]{signature} 
 & & & 11/02/2018\\
 \cline{1-1}
 \cline{4-4}
