--- a/src/main/webapp/award_files/award.tex
+++ b/src/main/webapp/award_files/award.tex
@@ -12,7 +12,7 @@ height = \paperheight] {award_background_1}}}
 \bfseries\center
 \Huge\textcolor{blue}{Employee of the Month}}
 \bfseries\center
-\begin{spacing}{2}
+\begin{spacing}{1}
 \large{Presented to}\
 \end{spacing}
 \LARGE\textit{Benjamin Johnson}
@@ -25,13 +25,13 @@ In recognition of your dedicated service to our customers and our company.
 \scalebox{.7}{
 \setlength{\tabcolsep}{2.6em}
 \centering{
-\begin{tabular}{cccc}
+\begin{tabular}{ccc}
 \\
 \includegraphics[width=8cm, height=2cm]{signature} 
-& & & 11/02/2018\\
+& & 11/02/2018\\
 \cline{1-1}
-\cline{4-4}
-Bao2 Chau & &  & Date
+\cline{3-3}
+Bao2 Chau & & Date
 \end{tabular}
 }}
 \begin{spacing}{.5}\end{spacing}
