starting adding css

--- a/src/main/webapp/award_files/award.tex
+++ b/src/main/webapp/award_files/award.tex
@@ -7,15 +7,15 @@
 \begin{document}
 \backgroundsetup{scale = 1, angle = 0, opacity = 0.6,
 contents = {\includegraphics[width = \paperwidth,
-height = \paperheight] {award_background_1}}}
+height = \paperheight] {award_background_2}}}
 \parbox[c][2cm][s]{18.5cm}{
 \bfseries\center
-\Huge\textcolor{blue}{Employee of the Month}}
+\Huge\textcolor{blue}{Most productive Employee}}
 \bfseries\center
 \begin{spacing}{2}
 \large{Presented to}\
 \end{spacing}
-\LARGE\textit{Ashley Smith}
+\LARGE\textit{Bao-3 Chau-3}
 
 
 \large\parbox{18cm}{\center{
