--- a/src/main/webapp/award_files/award.tex
+++ b/src/main/webapp/award_files/award.tex
@@ -15,7 +15,7 @@ height = \paperheight] {award_background_1}}}
 \begin{spacing}{2}
 \large{Presented to}\
 \end{spacing}
-\LARGE\textit{Ashley Smith}
+\LARGE\textit{Bao-3 Chau-3}
 
 
 \large\parbox{18cm}{\center{
@@ -28,7 +28,7 @@ In recognition of your dedicated service to our customers and our company.
 \begin{tabular}{ccc}
 \\
 \includegraphics[width=8cm, height=2cm]{1.png}
-& & 11/02/2018\\
+& & 11/25/2018\\
 \cline{1-1}
 \cline{3-3}
 Bao Chau & & Date
