added employee update

--- a/src/main/webapp/award_files/award.tex
+++ b/src/main/webapp/award_files/award.tex
@@ -15,7 +15,7 @@ height = \paperheight] {award_background_1}}}
 \begin{spacing}{2}
 \large{Presented to}\
 \end{spacing}
-\LARGE\textit{Bao-3 Chau-3}
+\LARGE\textit{Brianggg dfd}
 
 
 \large\parbox{18cm}{\center{
@@ -27,8 +27,8 @@ In recognition of your dedicated service to our customers and our company.
 \centering{
 \begin{tabular}{ccc}
 \\
-\includegraphics[width=8cm, height=2cm]{1.png}
-& & 11/25/2018\\
+\includegraphics[width=8cm, height=2cm]{1.jpg}
+& & 11/27/2018\\
 \cline{1-1}
 \cline{3-3}
 Bao Chau & & Date
