--- a/src/main/webapp/award_files/award.tex
+++ b/src/main/webapp/award_files/award.tex
@@ -7,10 +7,10 @@
 \begin{document}
 \backgroundsetup{scale = 1, angle = 0, opacity = 0.6,
 contents = {\includegraphics[width = \paperwidth,
-height = \paperheight] {award_background_1}}}
+height = \paperheight] {award_background_2}}}
 \parbox[c][2cm][s]{18.5cm}{
 \bfseries\center
-\Huge\textcolor{blue}{Employee of the Month}}
+\Huge\textcolor{blue}{Leadership Skill}}
 \bfseries\center
 \begin{spacing}{2}
 \large{Presented to}\
@@ -28,7 +28,7 @@ In recognition of your dedicated service to our customers and our company.
 \begin{tabular}{ccc}
 \\
 \includegraphics[width=8cm, height=2cm]{1.png}
-& & 11/02/2018\\
+& & 04/04/1944\\
 \cline{1-1}
 \cline{3-3}
 Bao Chau & & Date
